--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,5 +20,9 @@ jobs:
     - name: Build with Maven
       run: mvn clean package
 
-    - name: Run the app
-      run: java -jar app/airports-search-jar-with-dependencies.jar -Xmx7m
+    - name: Run the app and print memory usage
+      run: |
+          java -jar app/airports-search-jar-with-dependencies.jar -Xmx7m &
+          APP_PID=$!
+          sleep 10s
+          ps -p $APP_PID -o rss=
