--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Run the app and print memory usage
       run: |
-          java -jar app/airports-search-jar-with-dependencies.jar -Xmx7m &
-          APP_PID=$!
-          sleep 10s
-          ps -p $APP_PID -o rss=
+        java -jar app/airports-search-jar-with-dependencies.jar -Xmx7m > stdout.log 2> stderr.log &
+        APP_PID=$!
+        sleep 10s
+        ps -p $APP_PID -o rss=
